# tlsvpp

./: CMakeLists.txt  README.md  start-cmd.vpp  startup.conf  tlsctrl.c  tlsctrl_api.c  tlsctrl_test.c
Agent/: Makefile  README.md  go.mod  go.sum
Agent/agent-data/: ca.pem  server.pem
Agent/hack/: generate-binapi.sh  tlsctrl_vpn_rpc.compat.go
Client/: BUILD-LINUX.md  LICENSE  NOTICE  README-APPS-v11.txt  README-CERT-FIX.txt  README-FINAL.txt  README-FIX-v2.md  README-FIX-v8.txt  README-MAC-FIX.txt  README-PATHS-FIX-v9.txt  README-RUNTIME-FIX-v13.txt  README-STAGE1-DATAPLANE.txt  README-STARTPAGE-FIX.txt  README-UPTIME.txt  README-UX-FIX-v3.txt  README-VPP-AGENT-FIX.txt  README-VPP-DOWN-FIX.txt  README.md  go.mod
VPP/tlsctrl/: tlsctrl_api.c  tlsctrl_app.c  tlsctrl_vpn.api  tlsctrl_vpn_api.c  tlsctrl_vpn_dp.c  tlsctrl_vpn_stream_cli.c  tlsctrl_vpn_transport.c  tlsctrl_vpn_transport_cli.c
VPP/tlsctrl-plugin-dataplane-stage1.patch/: CMakeLists.txt  README-DATAPLANE-STAGE1.txt  tlsctrl.c  tlsctrl_app.c  tlsctrl_cli.c  tlsctrl_vpn.c  tlsctrl_vpn.h  tlsctrl_vpn_frame_cli.c  tlsctrl_vpn_stream.c  tlsctrl_vpn_transport.c
Web/public/: app.js  index.html
tlsctrl/: CMakeLists.txt  tlsctrl.api  tlsctrl.c  tlsctrl.h  tlsctrl_app.c  tlsctrl_cli.c  tlsctrl_vpn.api  tlsctrl_vpn.c  tlsctrl_vpn.h  tlsctrl_vpn_api.c  tlsctrl_vpn_cli.c  tlsctrl_vpn_dp.c  tlsctrl_vpn_dp_cli.c  tlsctrl_vpn_frame.c  tlsctrl_vpn_stream.c  tlsctrl_vpn_transport.c  tlsctrl_vpn_transport_cli.c
tlsctrl-agent-vpp-bundle/: .env.example  README.md  go.mod
tlsctrl-web-vpp-bundle/: README.md
(+423 files in other folders)
